# Unicon

./: .gitignore  README.md  README_ja.md
.github/workflows/: release.yml
DockIconPlugin/DockIconPlugin.xcodeproj/: project.pbxproj
Plugins/Windows/DockIconPlugin/: CMakeLists.txt  DockIconPlugin.cpp
Plugins/Windows/Unicon/: CMakeLists.txt  UniconPlugin.cpp
Plugins/macOS/: build_and_deploy.sh
Plugins/macOS/DockIconPlugin/: DockIconPlugin.swift
Plugins/macOS/UniconPlugin/: UniconPlugin.swift
Plugins/macOS/UniconPlugin.xcodeproj/: project.pbxproj
Sample/: Unicon.Editor.csproj.DotSettings
Sample/ProjectSettings/: ProjectSettings.asset
mac_icon_changer/Assets/: UniversalRenderPipelineGlobalSettings.asset
